# template-fastapi-project

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  activate.sh  clean  dev  entry_point.sh  install  install.py  install.sh  install_dev.sh  lint  lint.sh  make_venv.py  prod  pyproject.toml  requirements.testing.txt  requirements.txt  run_dev.py  run_docker.sh  setup.py  test  test.sh  tox.ini  unicorn.sh
.github/workflows/: lint.yml  push_ubuntu.yml  test_macos.yml  test_ubuntu.yml  test_win.yml
fastapi_template_project/: app.py  log.py  settings.py  util.py  version.py
givesendgoscraper/: app.py
myapp_xxx/: app.py  version.py
src/fastapi_template_project/: app.py  log.py  settings.py
tests/: test_example.py  test_version.py
